Fix z-index

--- a/demo/src/sass/custom/detachable.scss
+++ b/demo/src/sass/custom/detachable.scss
@@ -10,6 +10,7 @@
     height: 210px;
     width: 370px;
     $size: 30px;
+    z-index:100;
     &>* { margin: 0}
     .close {
       position: absolute;
